# modernize

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  __main__.py  modernize.py  pyproject.toml  setup.cfg  setup.py  tox.ini  tox_install_command.py
.github/workflows/: build.yml  main.yml
docs/: Makefile  conf.py  fixers.rst  index.rst  make.bat
docs/sphinxext/: extra_types.py
libmodernize/: __init__.py  main.py
libmodernize/fixes/: __init__.py  fix_basestring.py  fix_classic_division.py  fix_dict_six.py  fix_file.py  fix_filter.py  fix_import.py  fix_imports_six.py  fix_input_six.py  fix_int_long_tuple.py  fix_itertools_imports_six.py  fix_itertools_six.py  fix_map.py  fix_metaclass.py  fix_next.py  fix_nonzero.py  fix_open.py  fix_print.py  fix_raise.py  fix_raise_six.py  fix_sha_md5.py  fix_sorted.py  fix_unichr.py  fix_unichr_type.py  fix_unicode.py  fix_unicode_future.py  fix_unicode_type.py  fix_urllib_six.py  fix_xrange_six.py  fix_zip.py
modernize/: __init__.py  __main__.py  main.py  utils.py
modernize/fixes/: __init__.py  fix_basestring.py  fix_classic_division.py  fix_dict_six.py  fix_file.py  fix_filter.py  fix_import.py  fix_imports_six.py  fix_input_six.py  fix_int_long_tuple.py  fix_itertools_imports_six.py  fix_itertools_six.py  fix_map.py  fix_metaclass.py  fix_next.py  fix_open.py  fix_print.py  fix_raise.py  fix_raise_six.py  fix_unichr.py  fix_unicode.py  fix_unicode_future.py  fix_unicode_type.py  fix_urllib_six.py  fix_xrange_six.py  fix_zip.py
tests/: test_fix_basestring.py  test_fix_classic_division.py  test_fix_dict_six.py  test_fix_file.py  test_fix_filter.py  test_fix_import.py  test_fix_imports_six.py  test_fix_input_six.py  test_fix_int_long_tuple.py  test_fix_itertools_imports_six.py  test_fix_map.py  test_fix_metaclass.py  test_fix_next.py  test_fix_nonzero.py  test_fix_open.py  test_fix_print.py  test_fix_raise.py  test_fix_sha_md5.py  test_fix_sorted.py  test_fix_unichr_type.py  test_fix_unicode.py  test_fix_unicode_type.py  test_fix_urllib_six.py  test_fix_xrange_six.py  test_fix_zip.py  test_fixes.py  test_future_behaviour.py  test_main.py  test_newlines.py  test_raise_six.py  utils.py
