[metadata]
name = modernize
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = PyCQA
maintainer_email = code-quality@python.org
url = https://github.com/PyCQA/modernize
description = A hack on top of fissix (lib2to3 fork) for modernizing code for hybrid codebases.
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    libmodernize
    libmodernize.fixes
py_modules = modernize
zip_safe = False
python_requires = ~=3.6
install_requires = fissix

[options.entry_points]
console_scripts =
    modernize = libmodernize.main:main
    python-modernize = libmodernize.main:main

[options.extras_require]
docs =
  sphinx~=3.2
test =
  pytest
  pytest-cov
  coverage>=5.3

[bdist_wheel]
universal = 1

[zest.releaser]
python-file-with-version = libmodernize/__init__.py

[flake8]
disable-noqa = True
max-line-length = 88
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)

[isort]
profile = black
add_imports=from __future__ import generator_stop

[tool:pytest]
addopts =
  --strict-config
  --strict-markers
  --cov
  --cov-fail-under=91.53
  --cov-report=term-missing:skip-covered
xfail_strict = True
junit_family = xunit2
filterwarnings =
    error

[coverage:run]
branch = True
source_pkgs =
    modernize
    libmodernize
source =
    tests

[coverage:paths]
source =
    .
    .tox/*/lib/*/site-packages/
    .tox\\*\\Lib\\site-packages\\

[tox:tox]
envlist =
    py{36,37,38},lint

[testenv]
extras = test
commands = pytest {posargs}

[testenv:coveralls]
passenv = GITHUB_*
deps =
  coveralls
  coverage>=5.3
commands = coveralls

[testenv:lint]
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure {posargs}
skip_install = true
