[metadata]
name = modernize
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = PyCQA
maintainer_email = code-quality@python.org
url = https://github.com/PyCQA/modernize
description = A hack on top of fissix (lib2to3 fork) for modernizing code for hybrid codebases.
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages =
    libmodernize
    libmodernize.fixes
py_modules = modernize
zip_safe = False
python_requires = ~=3.6
install_requires = fissix

[options.entry_points]
console_scripts =
    modernize = libmodernize.main:main
    python-modernize = libmodernize.main:main

[options.extras_require]
docs =
  sphinx~=3.2
test =
  pytest
  pytest-cov
  coverage>=5.3

[bdist_wheel]
universal = 1

[zest.releaser]
python-file-with-version = libmodernize/__init__.py
tag-format = v{version}

[flake8]
disable-noqa = True
max-line-length = 88
extend-ignore =
   E203,  # whitespace before : is not PEP8 compliant (& conflicts with black)
